# bitcoin-chatbot-gpt3

./: .gitignore  .replit  Pipfile  Procfile  README.md  bitcoin_rabbit_hole.json  bot.py  keep_alive.py  main.py  mastering_bitcoin.json  mastering_bitcoin_scrape.json  pyproject.toml  requirements.txt  server.py  text_transformation_test.py  wsgi.py
app/: __init__.py  bot.py  keep_alive.py  main.py
datasets/: chow_collection_scrape.json  chow_collection_scrape.jsonl  mastering_bitcoin_scrape.json  nakamoto_institute_scrape.json  training_data_v1.json  training_data_v1_cleabed.json
datasets/old_datasets/: bitcoin_training_data_v1.jsonl
datasets/openai_datasets/: bitcoin_chatbot_training_data.jsonl  chow_collection_scrape.jsonl
gpt3/: clean_text.py  create_fine_tune.py  generate_training_data.py  prepare_data.py  upload_training_data.py
suggestion/: knn.py  wrangle_clean_utils.py
webscraping/: bitcoin_rabbit_hole.py  bullish_case.json  bullish_case_prepared.jsonl  bullish_case_scrape.py  combine_data.py  gradually_then_suddenly.json  gradually_then_suddenly_prepared.jsonl  gradually_then_suddenly_scrape.py  mastering_bitcoin_prepared.jsonl  mastering_bitcoin_scrape.py  nakamoto_institute_articles.json  nakamoto_institute_articles_prepared.jsonl  nakamoto_institute_scrape.py  run_webscraping.py  scrape_all_text.py
webscraping/articles/: bitcoin_rabbit_hole.py  mastering_bitcoin_scrape.py  nakamoto_institute_articles.py  nakamoto_institute_scrape.json
webscraping/podcasts/: chow_collection_scrape.py
