[tool.poetry]
name = "repl_python3_bitcoin-chatbot-gpt3-1"
version = "0.1.0"
description = ""
authors = ["koie11 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
selenium = "^3.141.0"
openai = "^0.10.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
